update: add changelog and minor revision

--- a/apps/docs/pages/static-api/data-catalogue/request-query.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/request-query.en.mdx
@@ -4,7 +4,7 @@ The Data Catalogue API supports several query parameters. The following table pr
 
 | Parameter | Type      | Required | Description                                                            |
 | --------- | --------- | -------- | ---------------------------------------------------------------------- |
-| id        | `string`  | Yes      | Indicates the specific resource requested.                             |
+| id        | `string`  | Required | Indicates the specific resource requested.                             |
 | filter    | `string`  | Optional | Indicates filter(s) of the data.                                       |
 | limit     | `integer` | Optional | Indicates the maximum number of responses to return.                   |
 | sort      | `string`  | Optional | Indicates the order of the response, in ascending or descending order. |
