--- a/apps/docs/pages/static-api/gtfs-static/overview.en.mdx
+++ b/apps/docs/pages/static-api/gtfs-static/overview.en.mdx
@@ -17,12 +17,16 @@ The GTFS-Static API incorporates data from various transport agencies. Agencies 
 - **Prasarana**: A public transport operator responsible for managing various modes of transportation, including LRT (Light Rail Transit), MRT (Mass Rapid Transit), monorail, and bus services.
 - **myBAS Johor Bahru**: A bus service operator in Johor Bahru, Malaysia, providing bus transportation on 19 routes across 5 corridors, including Kota Tinggi, Masai, Kulai, Gelang Patah, and Pontian.
 
-### TODO: Update frequency
+## TODO: Update frequency
 
-_TODO: be less vague and give actual frequency!_ (maybe should have a changelog?)
+_TODO: be less vague and give actual frequency! (changes should also be reflected in changelog)_
 
-- updated x time a year etc.
-- we recommend checking y times per day
-- how to check when last modified? refer to api response x section..
+The GTFS transport data is typically updated multiple times a year to ensure accuracy and reflect any changes in the transportation network. The exact update frequency may vary depending on the transportation agency and their data management practices.
 
-The update frequency of the GTFS-Static data depends on the respective transport agencies. Each agency determines the frequency at which they publish updates to their transit data. The GTFS-Static API aims to provide the most up-to-date information available from the participating agencies. Developers utilizing the API should refer to the individual agency's update schedule or notifications for specific details on the frequency of data updates.
+### Recommended Check Frequency
+
+To stay up to date with the latest GTFS data, we recommend...
+
+### Checking Last Modified Timestamp
+
+Lorem Ipsum
