style: updating headings

--- a/apps/docs/pages/faq.en.mdx
+++ b/apps/docs/pages/faq.en.mdx
@@ -1,4 +1,4 @@
-# FAQ
+# Frequently Asked Questions
 
 export function FAQBox({ title, children }) {
   return (
@@ -11,7 +11,7 @@ export function FAQBox({ title, children }) {
   );
 }
 
-##### General
+## General
 
 <FAQBox title="How can I notify the team of a bug?">
   Answer: common inquiries and provide clarity on various aspects of the MODS community. This
@@ -39,7 +39,7 @@ export function FAQBox({ title, children }) {
   purpose, objectives, and procedures of MODS.
 </FAQBox>
 
-##### Data & Tech
+## Data & Tech
 
 <FAQBox FAQBox title="Why don’t you have a data request page yet?">
   Answer: common inquiries and provide clarity on various aspects of the MODS community. This
