--- a/apps/docs/pages/faq.ms.mdx
+++ b/apps/docs/pages/faq.ms.mdx
@@ -1,8 +1,8 @@
 # Soalan Lazim
 
-import { FAQBox } from "./faq.en.mdx"
+import { FAQBox } from "./faq.en.mdx";
 
-##### Umum
+## Umum
 
 <FAQBox title="How can I notify the team of a bug?">
   Answer: common inquiries and provide clarity on various aspects of the MODS community. This
@@ -30,7 +30,7 @@ import { FAQBox } from "./faq.en.mdx"
   purpose, objectives, and procedures of MODS.
 </FAQBox>
 
-##### Data & Teknologi
+## Data & Teknologi
 
 <FAQBox FAQBox title="Why don’t you have a data request page yet?">
   Answer: common inquiries and provide clarity on various aspects of the MODS community. This
