--- a/apps/docs/pages/index.en.mdx
+++ b/apps/docs/pages/index.en.mdx
@@ -1,16 +1,19 @@
 # Introduction
 
-The Open API built by the Malaysian government is a RESTful API designed to provide transparent data access to all citizens,
-enabling access to crucial datasets from a plaethora of government agencies. You can find data about transportation, weather, elections and many more.
+Welcome to the documentation for the Open API of Malaysia's official open data portal! This comprehensive resource is designed to provide you with all the information you need to effectively utilize the Open API developed by the Malaysian government. Whether you are a developer, data scientist, or a citizen interested in accessing transparent data, this documentation will serve as your guide to leveraging the power of the Open API.
 
-Using this Open API, users can retrieve data in a straightforward and easy-to-understand manner.
-The API is designed to be user-friendly, and the documentation page has been created to help users understand how to use the API efficiently.
-Users can expect to receive reliable and accurate data through this API, making it an essential resource for anyone looking to access data in Malaysia.
+## What is the Open API?
 
-Inline `code` looks like this
+The Open API built by the Malaysian government is a RESTful API that utilizes the Django framework. This API has been developed with the objective of providing transparent data access to all citizens, with the following goals in mind:
 
-```tsx filename="hello.tsx" copy
-const HelloWorld = () => {
-  return "hello world";
-};
-```
+- **Transparent Data Access:** The API provides citizens with a user-friendly way to access a wide range of data sets, promoting transparency and enabling informed decision-making.
+
+- **Ease of Use:** The API is designed to be straightforward and easy to understand, ensuring that users can retrieve data efficiently without unnecessary complexity.
+
+- **Diverse Data Sets:** The Open API offers access to various data catalogs, transportation data, weather data, and more, allowing users to explore and analyze different aspects of Malaysian society.
+
+## Using the AI Helper
+
+To enhance your experience in finding specific information within this documentation, we have integrated an AI helper. You can interact with the AI helper by typing your questions or keywords into the chat interface on the right side of the page. The AI helper will analyze your input and provide relevant suggestions, snippets, or links to the corresponding sections within the documentation.
+
+We hope this documentation proves to be a valuable resource for you as you explore and leverage the power of Malaysia's national Open API. Let's begin this exciting journey together!
