fix: sidebar nesting

--- a/apps/docs/pages/static-api/data-catalogue.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue.en.mdx
@@ -1,3 +1,21 @@
+## The Data Catalogue API Endpoint
+
+```http
+GET https://api.data.gov.my/catalogue
+```
+
+## What does Data Catalogue API do?
+
+The Data Catalogue API is designed to allow users to access data from the data catalogue programmatically. It provides a set of endpoints that can be used to query the data based on various parameters and filters. The API is meant for use by developers and data scientists who want to programmatically access the data catalogue, although users who want to download data directly can also refer to the Data Catalogue page.
+
+### How do I know what resources are available?
+
+To determine the available resources and their corresponding IDs and fields, you can refer to the [Data Catalogue page](#TODO). The Data Catalogue page provides a comprehensive list of all the resources available in the catalogue, along with their associated IDs and fields.
+
+By visiting the Data Catalogue page, you can browse through the available resources and explore their details. Each resource will have a unique ID that you can use when making requests to the Data Catalogue API. Additionally, you can view the fields or columns associated with each resource, which will help you understand the structure of the data and what information is available.
+
+Make sure to regularly check the Data Catalogue page for any updates or new additions to the catalogue, as it will provide the most up-to-date information about the available resources and their corresponding IDs and fields.
+
 ## Query Parameters
 
 The Data Catalogue API supports several query parameters. The following table provides information about the available query parameters, their data types, and whether they are required:
@@ -112,3 +130,35 @@ GET .../catalogue?id=fuelprice&start=2022-01-01&end=2022-12-31
 - `<start_date>` and `<end_date>` represent the start and end dates of the desired date range.
 - The dates must be in a format compatible with the data being queried. TODO: update this with specific format once BE updates.
 - The data will be filtered to include dates greater than or equal to `<start_date>` and less than or equal to `<end_date>`.
+
+## Response Format
+
+### Valid Response
+
+When you make a successful request to the Data Catalogue API, you will receive a response with a status code of `200`. Here is the structure of the response format:
+
+```JSON
+{
+    meta: {...},
+    data: {...}
+}
+```
+
+- `meta` - This field indicates lightweight meta information about the requested resource.
+- `data` - This field represents the requested resource, which may include additional information based on the provided query parameters.
+
+### Error Response
+
+In case of an error, the Data Catalogue API will return an error response in JSON format. The error response will contain the following elements:
+
+```json
+{
+    status: <int>,
+    errors: [...],
+}
+```
+
+- `status` - This field indicates the response code corresponding to the error.
+- `errors` - This field provides an array of error messages or descriptions.
+
+The error response is designed to help you identify and troubleshoot the issue you encountered with your API requests.
