docs: update root sections' contents

--- a/apps/docs/pages/changelog.en.mdx
+++ b/apps/docs/pages/changelog.en.mdx
@@ -1,11 +1,11 @@
-## 1.0.0 (2023-09-05)
+## 1.0.0 (2023-09-13)
 
 ### Initial Release
 
-- Launched Malaysia's OPENAPI with the following endpoints:
-  - `/gtfs-static` for retrieving GTFS (General Transit Feed Specification) static data.
-  - `/data-catalogue` for accessing the data catalogue.
+- Launched Malaysia's OpenAPI with the following endpoints:
+  - `/data-catalogue` for accessing data catalogue.
+  - `/opendosm` for accessing OpenDOSM data catalogue resources.
+  - `/flood-warning` for accessing realtime flood warning data.
 
 [Unreleased]: #unreleased
-[1.2.0]: #1.2.0---2023-06-15
-[1.1.0]: #1.1.0---2023-05-20
+[1.1.0]: #1.1.0---2023-10-25
