--- a/apps/docs/pages/index.ms.mdx
+++ b/apps/docs/pages/index.ms.mdx
@@ -1,4 +1,4 @@
-# Pengenalan
+## Dokumentasi OpenAPI
 
 Selamat datang ke dokumentasi bagi API Terbuka portal data terbuka rasmi Malaysia!
 Panduan komprehensif ini direka untuk memberi anda semua maklumat yang anda perlukan untuk menggunakan API Terbuka yang dibangunkan oleh kerajaan Malaysia dengan berkesan.
