--- a/apps/docs/pages/authentication.en.mdx
+++ b/apps/docs/pages/authentication.en.mdx
@@ -2,7 +2,7 @@
 
 While accessing the OpenAPI does not require an API token, we provide the option to request a token if you anticipate reaching the rate limits or need increased usage. To request an API token, please follow the steps below:
 
-1. Send an email to [token@dtsa.gov.my](...) with the following details:
+1. Send an email to [data.dtsa@mampu.gov.my](mailto:data.dtsa@mampu.gov.my) with the following details:
 
    - Your name
    - Your email address
@@ -11,8 +11,6 @@ While accessing the OpenAPI does not require an API token, we provide the option
 2. Our team will review your request and assess it on a case-by-case basis.
 
 3. If your request is approved, you will receive an API token via email.
-
-Requesting an API token allows us to ensure fair usage and prevent abuse, while providing you with the necessary resources to meet your application requirements.
 
 ## Using Your API Token
 
@@ -27,5 +25,3 @@ Once you have obtained an API token, you need to include it in your API requests
    Replace `<YOUR_TOKEN_HERE>` with the actual token you received.
 
 2. Send your HTTP request with the added `Authorization` header.
-
-By including the API token in the `Authorization` header, you ensure that your requests are authenticated and have the necessary privileges to access the OpenAPI with increased usage limits.
