--- a/apps/docs/pages/authentication.ms.mdx
+++ b/apps/docs/pages/authentication.ms.mdx
@@ -1,24 +1,22 @@
-## Permintaan Token API
+## Permohonan Token API
 
-Walaupun akses kepada OpenAPI tidak memerlukan token API, kami menyediakan pilihan untuk meminta token jika anda merancang untuk mencapai had penggunaan atau memerlukan penggunaan yang lebih tinggi. Untuk meminta token API, sila ikuti langkah-langkah berikut:
+Walaupun mengakses OpenAPI tidak memerlukan token API, kami menyediakan pilihan untuk memohon token jika anda merancang untuk mencapai had kadar atau memerlukan penggunaan yang lebih tinggi. Untuk memohon token API, sila ikuti langkah-langkah di bawah:
 
-1. Hantar emel kepada [token@dtsa.gov.my](...) dengan butiran berikut:
+1. Hantar emel ke [data.dtsa@mampu.gov.my](mailto:data.dtsa@mampu.gov.my) dengan butiran berikut:
 
    - Nama anda
    - Alamat emel anda
-   - Sebab untuk meminta had penggunaan yang ditingkatkan
+   - Sebab permohonan peningkatan had kadar
 
-2. Pasukan kami akan meninjau permintaan anda dan menilainya secara individu.
+2. Pasukan kami akan mengkaji permohonan anda dan menilainya mengikut kes secara individu.
 
-3. Jika permintaan anda diluluskan, anda akan menerima token API melalui emel.
-
-Meminta token API membolehkan kami memastikan penggunaan yang adil dan mencegah penyalahgunaan, sambil memberikan anda sumber yang diperlukan untuk memenuhi keperluan aplikasi anda.
+3. Jika permohonan anda diluluskan, anda akan menerima token API melalui emel.
 
 ## Menggunakan Token API Anda
 
-Setelah anda memperoleh token API, anda perlu menyertakannya dalam permintaan API anda untuk mengesahkan dan mendapatkan akses kepada had penggunaan yang ditingkatkan. Ikuti langkah-langkah berikut untuk menyertakan token API anda dalam permintaan HTTP:
+Setelah anda mendapatkan token API, anda perlu menyertakannya dalam permintaan API anda untuk pengesahan dan mendapatkan akses kepada had penggunaan yang lebih tinggi. Ikuti langkah-langkah di bawah untuk menyertakan token API anda dalam permintaan HTTP:
 
-1. Tambahkan tajuk berikut dalam permintaan anda:
+1. Tambahkan tajuk berikut ke permintaan anda:
 
    ```
    Authorization: Bearer <TOKEN_ANDA_DI_SINI>
@@ -26,6 +24,4 @@ Setelah anda memperoleh token API, anda perlu menyertakannya dalam permintaan AP
 
    Gantikan `<TOKEN_ANDA_DI_SINI>` dengan token sebenar yang anda terima.
 
-2. Hantar permintaan HTTP anda dengan tajuk `Authorization` yang ditambahkan.
-
-Dengan menyertakan token API dalam tajuk `Authorization`, anda memastikan bahawa permintaan anda dikenal pasti dan mempunyai keistimewaan yang diperlukan untuk mengakses OpenAPI dengan had penggunaan yang ditingkatkan.
+2. Hantar permintaan HTTP anda dengan header `Authorization` yang ditambahkan.
