--- a/apps/docs/pages/index.en.mdx
+++ b/apps/docs/pages/index.en.mdx
@@ -1,4 +1,4 @@
-# Introduction
+## OpenAPI Documentation
 
 Welcome to the documentation for the Open API of Malaysia's official open data portal!
 This comprehensive guide is designed to provide you with all the information you need to effectively utilize the Open API developed by the Malaysian government.
