--- a/apps/docs/pages/quickstart.en.mdx
+++ b/apps/docs/pages/quickstart.en.mdx
@@ -3,14 +3,14 @@
 The Open API is flexible and can be used both with and without an API token. To ensure responsible usage and prevent abuse, there are limits on the number of requests users can make.
 
 For new users, we recommend starting without authentication as it simplifies the initial set up process.
-However, if you find yourself needing more functionality beyond the limitations of unauthenticated access, you have the option to [request for an API token](/overview/authentication).
+However, if you find yourself needing more functionality beyond the limitations of unauthenticated access, you have the option to [request for an API token](authentication).
 
 ## Sending a Request
 
-To access the Open API, always use the base URL https://api.data.gov.my to send a HTTP GET request. When making API requests, prepend this base URL to the specific API endpoints you want to access. Here's an example of a request that returns a maximum of 3 fuel price records, using the [Data Catalogue API](/static-api/data-catalogue/overview):
+To access the Open API, always use the base URL https://api.data.gov.my to send a HTTP GET request. When making API requests, prepend this base URL to the specific API endpoints you want to access. Here's an example of a request that returns a maximum of 3 fuel price records, using the [Data Catalogue API](static-api/data-catalogue):
 
 ```http
-GET https://api.data.gov.my/catalogue?id=fuelprice&limit=3
+GET https://api.data.gov.my/data-catalogue?id=fuelprice&limit=3
 ```
 
 In this example:
