--- a/apps/docs/pages/quickstart.ms.mdx
+++ b/apps/docs/pages/quickstart.ms.mdx
@@ -1,28 +1,28 @@
-## Sebelum anda memulakan
+## Sebelum Anda Memulakan
 
-Open API adalah fleksibel dan boleh digunakan dengan atau tanpa token API. Untuk memastikan penggunaan yang bertanggungjawab dan mengelakkan penyalahgunaan, terdapat had pada bilangan permintaan yang pengguna boleh buat.
+API Terbuka ini fleksibel dan boleh digunakan dengan atau tanpa token API. Bagi memastikan penggunaan yang bertanggungjawab dan mengelakkan penyalahgunaan, terdapat had pada bilangan permintaan yang pengguna boleh buat.
 
-Bagi pengguna baru, kami mengesyorkan untuk memulakan tanpa pengesahan kerana ia memudahkan proses pembelajaran awal.
-Namun, jika anda merasakan anda memerlukan lebih banyak fungsi melebihi had akses tanpa pengesahan, anda mempunyai pilihan untuk [meminta token API](/overview/authentication).
+Bagi pengguna baru, kami mencadangkan untuk memulakan tanpa pengesahan kerana ia menyederhanakan proses penubuhan awal.
+Walau bagaimanapun, jika anda mendapati diri anda memerlukan lebih banyak fungsi melebihi had akses tanpa pengesahan, anda mempunyai pilihan untuk [meminta token API](authentication).
 
 ## Menghantar Permintaan
 
-Untuk mengakses OpenAPI, sentiasa gunakan URL asas https://datagovmy.app untuk menghantar permintaan HTTP GET. Apabila membuat permintaan API, tambahkan URL asas ini di hadapan titik akhir API yang ingin anda akses. Berikut adalah contoh permintaan yang mengembalikan maksimum 3 rekod harga bahan api, menggunakan [Data Catalogue API](/static-api/data-catalogue/overview):
+Untuk mengakses API Terbuka, sentiasa gunakan URL asas https://api.data.gov.my untuk menghantar permintaan GET HTTP. Apabila membuat permintaan API, tambahkan URL asas ini ke hujung URL API tertentu yang anda ingin akses. Berikut adalah contoh permintaan yang mengembalikan maksimum 3 rekod harga petrol, menggunakan [API Katalog Data](static-api/data-catalogue):
 
 ```http
-GET https://datagovmy.app/catalogue?id=fuelprice&limit=3
+GET https://api.data.gov.my/data-catalogue?id=fuelprice&limit=3
 ```
 
 Dalam contoh ini:
 
-- URL asas ialah `https://datagovmy.app`.
-- Titik akhir API tertentu ialah `/catalogue`.
-- Parameter kueri yang digunakan ialah `id` dan `limit`.
+- URL asas ialah `https://api.data.gov.my`.
+- Titik akhir API tertentu adalah `/data-catalogue`.
+- Parameter pertanyaan yang digunakan adalah `id` dan `limit`.
 
 ## Koleksi Postman
 
-Kami mengesyorkan untuk memulakan eksplorasi OpenAPI dengan berinteraksi dengan koleksi Postman kami.
-Koleksi tersebut menyediakan persekitaran interaktif di mana anda boleh menghantar permintaan dan menerima respons secara masa nyata.
-Ia menawarkan contoh lengkap semua titik akhir yang tersedia, membolehkan anda bereksperimen, menyalin permintaan, dan menyesuaikannya mengikut keperluan anda.
+Kami mencadangkan anda memulakan penjelajahan API Terbuka dengan berinteraksi dengan koleksi Postman kami.
+Koleksi ini menyediakan persekitaran interaktif di mana anda boleh menghantar permintaan dan menerima respons secara waktu sebenar.
+Ia menawarkan contoh menyeluruh dari semua titik akhir yang tersedia, membolehkan anda menguji, menggandakan permintaan, dan menyesuaikannya untuk memenuhi keperluan anda yang khusus.
 
-[![Run di Postman](https://run.pstmn.io/button.svg)](https://app.getpostman.com/run-collection/27417094-46653022-3966-4fa7-b2fa-45130738d101?action=collection%2Ffork&source=rip_markdown&collection-url=entityId%3D27417094-46653022-3966-4fa7-b2fa-45130738d101%26entityType%3Dcollection%26workspaceId%3Df874513b-de9a-4370-8063-8a1a6bcf994d)
+[![Jalankan di Postman](https://run.pstmn.io/button.svg)](https://app.getpostman.com/run-collection/27417094-46653022-3966-4fa7-b2fa-45130738d101?action=collection%2Ffork&source=rip_markdown&collection-url=entityId%3D27417094-46653022-3966-4fa7-b2fa-45130738d101%26entityType%3Dcollection%26workspaceId%3Df874513b-de9a-4370-8063-8a1a6bcf994d)
