--- a/apps/docs/pages/rate-limit.en.mdx
+++ b/apps/docs/pages/rate-limit.en.mdx
@@ -1,6 +1,6 @@
-## Rate Limits
+## Throttling Rates
 
-To ensure fair usage and consistent performance, we enforce rate limits on the number of requests that can be made within a specific timeframe. This also ensures as many API users as possible have the opportunity of using the API without slowdowns. 
+To ensure fair usage and consistent performance, we enforce rate limits on the number of requests that can be made within a specific timeframe. This also ensures as many API users as possible have the opportunity of using the API without slowdowns.
 
 If the limit is exceeded, subsequent requests will fail and you will receive a `429 Too Many Requests` error in your responses.
 
@@ -9,6 +9,8 @@ The following table outlines the rate limits for different APIs:
 | API            | Rate Limits without Token | Rate Limits with Token |
 | -------------- | ------------------------- | ---------------------- |
 | Data Catalogue | 4 requests per minute     | 10 requests per minute |
-| GTFS-Static    | 4 requests per minute     | 10 requests per minute |
+| OpenDOSM       | 4 requests per minute     | 10 requests per minute |
+| Flood Warning  | 4 requests per minute     | 10 requests per minute |
+| Weather        | 4 requests per minute     | 10 requests per minute |
 
-Please note that the rate limits vary based on whether you are using an API token or not. If you anticipate exceeding the rate limits without an API token, we recommend [requesting an API token](/overview/authentication).
+Please note that the rate limits vary based on whether you are using an API token or not. If you anticipate exceeding the rate limits without an API token, we recommend [requesting an API token](/authentication).
