docs: update content

--- a/apps/docs/pages/realtime-api/weather.en.mdx
+++ b/apps/docs/pages/realtime-api/weather.en.mdx
@@ -1,5 +1,8 @@
-# Weather
+## Weather API Endpoint
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iusto quam natus eum molestias
-impedit, magnam error harum quos vitae illum quidem, quod modi doloremque iste adipisci nam corrupti
-quo?
+```http
+# COMING SOON
+GET https://api.data.gov.my/weather
+```
+
+Our Weather API will be officially launching on **October 5, 2023**. Please stay tuned for updates!
