--- a/apps/docs/pages/static-api/opendosm.en.mdx
+++ b/apps/docs/pages/static-api/opendosm.en.mdx
@@ -7,8 +7,8 @@ GET https://api.data.gov.my/opendosm
 ### What does OpenDOSM API do?
 
 The OpenDOSM API is designed to allow users to programmatically access OpenDOSM data catalogue.
-This API is intended for users who are only interested in OpenDOSM data catalogue.
-For more, please refer to [Data Catalogue API](/static-api/data-catalogue).
+This API is tailored for users who are interested exclusively in OpenDOSM data.
+For more general data across data.gov.my, please refer to [Data Catalogue API](/static-api/data-catalogue).
 
 ### How to Find Available Resources
 
