--- a/apps/docs/pages/static-api/data-catalogue.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue.en.mdx
@@ -1,164 +1,57 @@
-## The Data Catalogue API Endpoint
+## Data Catalogue API Endpoint
 
 ```http
-GET https://api.data.gov.my/catalogue
+GET https://api.data.gov.my/data-catalogue
 ```
 
-## What does Data Catalogue API do?
+### What does Data Catalogue API do?
 
-The Data Catalogue API is designed to allow users to access data from the data catalogue programmatically. It provides a set of endpoints that can be used to query the data based on various parameters and filters. The API is meant for use by developers and data scientists who want to programmatically access the data catalogue, although users who want to download data directly can also refer to the Data Catalogue page.
+The Data Catalogue API is designed to allow users to access data from the data catalogue programmatically.
+It provides a set of endpoints that can be used to query the data based on various parameters and filters.
+The API is meant for use by developers and data scientists who want to programmatically access the data catalogue, although users who want to download data directly can also refer to the Data Catalogue page.
 
-### How do I know what resources are available?
+### How to Find Available Resources
 
-To determine the available resources and their corresponding IDs and fields, you can refer to the [Data Catalogue page](#TODO). The Data Catalogue page provides a comprehensive list of all the resources available in the catalogue, along with their associated IDs and fields.
-
-By visiting the Data Catalogue page, you can browse through the available resources and explore their details. Each resource will have a unique ID that you can use when making requests to the Data Catalogue API. Additionally, you can view the fields or columns associated with each resource, which will help you understand the structure of the data and what information is available.
-
-Make sure to regularly check the Data Catalogue page for any updates or new additions to the catalogue, as it will provide the most up-to-date information about the available resources and their corresponding IDs and fields.
-
-## Query Parameters
-
-The Data Catalogue API supports several query parameters. The following table provides information about the available query parameters, their data types, and whether they are required:
-
-| Parameter | Type      | Required | Description                                                            |
-| --------- | --------- | -------- | ---------------------------------------------------------------------- |
-| id        | `string`  | Required | Indicates the specific resource requested.                             |
-| filter    | `string`  | Optional | Indicates filter(s) of the data.                                       |
-| limit     | `integer` | Optional | Indicates the maximum number of responses to return.                   |
-| sort      | `string`  | Optional | Indicates the order of the response, in ascending or descending order. |
-| include   | `string`  | Optional | Indicates the columns to include in the response.                      |
-| exclude   | `string`  | Optional | Indicates the columns to exclude from the response.                    |
-| start     | `date`    | Optional | Indicates the start date range (only if `date` is available).          |
-| end       | `date`    | Optional | Indicates the end date range (only if `date` is available).            |
-
-Please note that the `filter` parameter is used for row-level filtering, while `include`/`exclude` parameters are used for column-level filtering.
-
-## Query Syntax
-
-When working with the OpenAPI, you can define query parameters by appending a question mark (`?`) after the base URL. Query parameters consist of a key-value pair, where the key and value are separated by an equal sign (`=`). If there are multiple parameters, they are separated by an ampersand (`&`).
-
-### The `filter` Parameter
-
-The `filter` parameter allows you to refine your API request by applying specific filters to the data. There are 2 different supported formats:
-
-#### String Equal filter
+To access specific data catalogue, you need to specify the `id` parameter in your request URL.
+It's a **required** parameter, here's an example of how to use it:
 
 ```http
-# Syntax
-?filter=<value>@<column>
-
-# Example
-GET .../catalogue?id=fuelprice&filter=level@series_type
+GET https://api.data.gov.my/data-catalogue?id=fuelprice
 ```
 
-- This format filters the data based on an exact string match.
-- The `<value>` represents the desired string value within the `<column>`.
-- The `<column>` denotes the column to be filtered.
+To discover the available resources, visit the [Data Catalogue page](https://data.gov.my/data-catalogue).
+There is a section at the bottom titled "Sample OpenAPI query," which contains the necessary `id` for each data catalogue.
+If a data catalogue is not available through the API, it will be explicitly mentioned.
 
-#### Range Filter
+## Request Query & Response Format
 
-```http
-# Syntax
-?filter=<column>[<begin>:<end>]
+To filter and request data, use the standard filtering operations in the [Request Query](/request-query).
+You can find information about the available filterable columns in the Metadata section under each Data Catalogue page.
+For information on how the API responds to your requests, refer to the [Response Format](/response-format) section.
 
-# Example - between 0 (inclusive) and 1 (inclusive)
-GET .../catalogue?id=fuelprice&filter=ron95[0:1]
+### Example Request
 
-# Example - between lowest possible ron95 value and 1 (inclusive)
-GET .../catalogue?id=fuelprice&filter=ron95[:1]
+Let's walk through an example using the `fuelprice` resource:
+
+#### 1. Finding the Resource
+
+Go to the Data Catalogue page and find the [Diesel Price dataset](https://data.gov.my/data-catalogue/commodities_fuelprice_3).
+Alternatively, you can also use the same `id` for two other fuel prices, [RON95](https://data.gov.my/data-catalogue/commodities_fuelprice_1) and [RON97](https://data.gov.my/data-catalogue/commodities_fuelprice_2), which are part of the same dataset.
+You'll find the `id` value, "fuelprice," in the "Sample OpenAPI query" section at the bottom of the page. We will use this `id` for our example.
+
+#### 2. Sending the API Request
+
+To fetch data from the API, use the following `curl` command. Open your terminal and enter this command:
+
+```curl
+curl --location 'http://api.data.gov.my/data-catalogue?id=fuelprice&limit=3'
 ```
 
-- This format filters the data within a specified numeric range.
-- `<column>` (required): Specifies the column to be filtered.
-- `<begin>` and `<end>` (optional): Define the numeric range. Both values are inclusive. If `<begin>` and `<end>` are not provided, the lowest or highest possible values will be used instead.
+Executing this command will send a request to the API, specifically targeting the `fuelprice` dataset, and limiting the response to the first 3 records.
+For more available filters, please refer to [Request Query](/request-query) section.
 
-### The `limit` Parameter
+#### 3. Understanding the Response
 
-```http
-# Syntax
-?limit=<value>
-
-# Example
-GET .../catalogue?id=fuelprice&limit=10
-```
-
-- `<value>` should be a positive integer that represents the maximum number of responses to be returned.
-- The API will return up to `<value>` responses based on the specified limit.
-- If the total number of available responses is less than the specified limit, all available responses will be returned.
-
-### The `sort` Parameter
-
-```http
-# Syntax
-?sort=<column>@<order>
-
-# Example
-GET .../catalogue?id=fuelprice&sort=ron95@asc
-```
-
-- `<column>` represents the column by which to sort.
-- `<order>` can be either `asc` (ascending) or `desc` (descending).
-- Nested sorting is supported by using space-separated queries, e.g. <nobr>`sort=ron95@asc date@desc`</nobr>.
-
-### Using `include` and `exclude` Parameters
-
-```http
-# Syntax
-?include=<column1,column2,...>
-?exclude=<column1,column2,...>
-
-# Example
-GET .../catalogue?id=fuelprice&include=ron95,ron97
-GET .../catalogue?id=fuelprice&exclude=diesel
-```
-
-- `<column1, column2, ...>` specifies the columns to be included or excluded.
-- Multiple columns can be separated by commas.
-- When both `include` and `exclude` parameters are provided, `include` takes precedence over `exclude`, such that only fields specified in `include` will be shown.
-
-### Using `start` and `end` Parameters
-
-```http
-# Syntax
-?start=<start_date>
-?end=<end_date>
-
-# Example
-GET .../catalogue?id=fuelprice&start=2022-01-01&end=2022-12-31
-```
-
-- `<start_date>` and `<end_date>` represent the start and end dates of the desired date range.
-- The dates must be in a format compatible with the data being queried. TODO: update this with specific format once BE updates.
-- The data will be filtered to include dates greater than or equal to `<start_date>` and less than or equal to `<end_date>`.
-
-## Response Format
-
-### Valid Response
-
-When you make a successful request to the Data Catalogue API, you will receive a response with a status code of `200`. Here is the structure of the response format:
-
-```JSON
-{
-    meta: {...},
-    data: {...}
-}
-```
-
-- `meta` - This field indicates lightweight meta information about the requested resource.
-- `data` - This field represents the requested resource, which may include additional information based on the provided query parameters.
-
-### Error Response
-
-In case of an error, the Data Catalogue API will return an error response in JSON format. The error response will contain the following elements:
-
-```json
-{
-    status: <int>,
-    errors: [...],
-}
-```
-
-- `status` - This field indicates the response code corresponding to the error.
-- `errors` - This field provides an array of error messages or descriptions.
-
-The error response is designed to help you identify and troubleshoot the issue you encountered with your API requests.
+To make sense of the API's response, you can refer to the [Response Format](/response-format) section.
+It provides a detailed explanation of what the API response means.
+In this example, the total length of this list will be 3, as specified by the `limit` parameter.
