docs: update content

--- a/apps/docs/pages/faq.en.mdx
+++ b/apps/docs/pages/faq.en.mdx
@@ -13,10 +13,9 @@ export function FAQBox({ title, children }) {
 
 ## General
 
-<FAQBox title="How can I notify the team of a bug?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
+<FAQBox title="How can I notify the team of a bug on OpenAPI?">
+  To report a bug, please visit our GitHub repository and [open a new
+  issue](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Bug&labels=bugs).
 </FAQBox>
 <FAQBox title="How can I suggest improvements for the site?">
   Answer: common inquiries and provide clarity on various aspects of the MODS community. This
@@ -47,9 +46,9 @@ export function FAQBox({ title, children }) {
   purpose, objectives, and procedures of MODS.
 </FAQBox>
 <FAQBox title="Can I really use all the data here for free?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
+  Yes, you can use the data available on our platform for free, as it's part of our commitment to
+  open data. We encourage users to explore, analyze, and utilize the data to drive innovation and
+  insights.
 </FAQBox>
 <FAQBox title="Could you share how this site was built?">
   Answer: common inquiries and provide clarity on various aspects of the MODS community. This
@@ -57,12 +56,7 @@ export function FAQBox({ title, children }) {
   purpose, objectives, and procedures of MODS.
 </FAQBox>
 <FAQBox title="Can my non-government agency share data here?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="How do you safeguard privacy in your operations?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
+  While our primary focus is on government-related data, we are open to collaborations. Please
+  contact us at [data.dtsa@mampu.gov.my](mailto:data.dtsa@mampu.gov.my) to discuss the possibility
+  of sharing data from your non-government agency.
 </FAQBox>
