--- a/apps/docs/pages/changelog.en.mdx
+++ b/apps/docs/pages/changelog.en.mdx
@@ -3,8 +3,8 @@
 ### Initial Release
 
 - Launched Malaysia's OpenAPI with the following endpoints:
-  - `/data-catalogue` for accessing data catalogue.
-  - `/opendosm` for accessing OpenDOSM data catalogue resources.
+  - `/data-catalogue` for accessing full data catalogue.
+  - `/opendosm` for accessing OpenDOSM specific data catalogue.
   - `/flood-warning` for accessing realtime flood warning data.
 
 [Unreleased]: #unreleased
