--- a/apps/docs/pages/changelog.ms.mdx
+++ b/apps/docs/pages/changelog.ms.mdx
@@ -4,7 +4,7 @@
 
 - Dilancarkan OpenAPI Malaysia dengan endpoints berikut:
   - `/data-catalogue` untuk mengakses katalog data.
-  - `/opendosm` untuk mengakses sumber katalog data OpenDOSM.
+  - `/opendosm` untuk mengakses katalog data OpenDOSM.
   - `/flood-warning` untuk mengakses data amaran banjir secara waktu sebenar.
 
 [Unreleased]: #unreleased
