--- a/apps/docs/pages/rate-limit.en.mdx
+++ b/apps/docs/pages/rate-limit.en.mdx
@@ -11,6 +11,10 @@ The following table outlines the rate limits for different APIs:
 | Data Catalogue | 4 requests per minute     | 10 requests per minute |
 | OpenDOSM       | 4 requests per minute     | 10 requests per minute |
 | Flood Warning  | 4 requests per minute     | 10 requests per minute |
-| Weather        | 4 requests per minute     | 10 requests per minute |
+| Weather        | TBD                       | TBD                    |
+| GTFS Static    | TBD                       | TBD                    |
+| GTFS Realtime  | TBD                       | TBD                    |
+
+<span className="text-sm italic">* APIs that are unreleased yet are marked with TBD.</span>
 
 Please note that the rate limits vary based on whether you are using an API token or not. If you anticipate exceeding the rate limits without an API token, we recommend [requesting an API token](/authentication).
