--- a/apps/docs/pages/request-query.ms.mdx
+++ b/apps/docs/pages/request-query.ms.mdx
@@ -1,5 +1,134 @@
-# Request Query
+## Parameter Pertanyaan
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iusto quam natus eum molestias
-impedit, magnam error harum quos vitae illum quidem, quod modi doloremque iste adipisci nam corrupti
-quo?
+Untuk API yang menyediakan koleksi rekod, anda boleh menyaring rekod-rekod dengan menggunakan parameter pertanyaan.
+Berikut adalah parameter pertanyaan yang tersedia yang boleh digunakan kecuali dinyatakan sebaliknya pada halaman API tertentu.
+
+| Parameter         | Jenis      | Penerangan                                                                    |
+| ----------------- | ---------- | ----------------------------------------------------------------------------- |
+| `filter`          | `string`   | Menyaring hasil untuk sepadan dengan nilai kolom yang tepat (peka kes).       |
+| `ifilter`         | `string`   | Menyaring hasil untuk sepadan dengan nilai kolom yang tepat (tidak peka kes). |
+| `contains`        | `string`   | Menyaring hasil untuk sepadan dengan sebahagian nilai kolom (peka kes).       |
+| `icontains`       | `string`   | Menyaring hasil untuk sepadan dengan sebahagian nilai kolom (tidak peka kes). |
+| `range`           | `string`   | Menyaring nilai-nilai kolom berjumlah dalam julat yang ditentukan.            |
+| `sort`            | `string`   | Menentukan urutan rekod (menaik atau menurun).                                |
+| `date_start`      | `date`     | Menyaring hasil bermula dari tarikh tertentu.                                 |
+| `date_end`        | `date`     | Menyaring hasil berakhir pada tarikh tertentu.                                |
+| `timestamp_start` | `datetime` | Menyaring hasil bermula dari capaian waktu tertentu.                          |
+| `timestamp_end`   | `datetime` | Menyaring hasil berakhir pada capaian waktu tertentu.                         |
+| `limit`           | `integer`  | Menetapkan jumlah maksimum rekod yang akan dikembalikan.                      |
+| `include`         | `string`   | Menentukan kolom-kolom yang akan dimasukkan dalam rekod.                      |
+| `exclude`         | `string`   | Menentukan kolom-kolom yang akan dikecualikan daripada rekod.                 |
+
+Sila ambil perhatian bahawa parameter `filter` digunakan untuk penyaringan pada peringkat baris, sementara parameter `include`/`exclude` digunakan untuk penyaringan pada peringkat kolom.
+
+## Syntax Pertanyaan
+
+Apabila berurusan dengan OpenAPI, anda boleh menentukan parameter pertanyaan dengan menambahkan tanda soalan (`?`) selepas URL asas.
+Parameter pertanyaan terdiri daripada sepasang nilai-nilai, di mana kunci dan nilai dipisahkan oleh tanda sama dengan (`=`).
+
+### Parameter `filter`
+
+```http
+?filter=<nilai>@<kolom>
+```
+
+- Menyaring data berdasarkan **padanan rentetan tepat yang peka kes**.
+- `<nilai>`: Mewakili nilai rentetan yang diinginkan dalam `<kolom>`.
+- `<kolom>`: Menunjukkan kolom yang akan disaring.
+
+### Parameter `ifilter`
+
+```http
+?ifilter=<nilai>@<kolom>
+```
+
+- Menyaring data berdasarkan **padanan rentetan tepat yang tidak peka kes**.
+- `<nilai>`: Mewakili nilai rentetan yang diinginkan dalam `<kolom>`.
+- `<kolom>`: Menunjukkan kolom yang akan disaring.
+
+### Parameter `contains`
+
+```http
+?contains=<nilai>@<kolom>
+```
+
+- Menyaring data berdasarkan **padanan sebahagian rentetan yang peka kes**.
+- `<nilai>`: Mewakili nilai rentetan sebahagian dalam `<kolom>`.
+- `<kolom>`: Menunjukkan kolom yang akan disaring.
+
+### Parameter `icontains`
+
+```http
+?icontains=<nilai>@<kolom>
+```
+
+- Menyaring data berdasarkan **padanan sebahagian rentetan yang tidak peka kes**.
+- `<nilai>`: Mewakili nilai rentetan sebahagian dalam `<kolom>`.
+- `<kolom>`: Menunjukkan kolom yang akan disaring.
+
+### Parameter `range`
+
+```http
+?range=<kolom>[<mula>:<akhir>]
+```
+
+- Menyaring data dalam julat nilai berjumlah yang ditentukan.
+- `<kolom>` (wajib): Menentukan kolom yang akan disaring.
+- `<mula>` dan `<akhir>` (pilihan): Merujuk kepada julat angka, kedua-dua nilai adalah termasuk. Jika tidak diberikan, nilai terendah dan tertinggi yang mungkin digunakan.
+
+### Parameter `sort`
+
+```http
+# satu kolom
+?sort=<kolom>
+
+# beberapa kolom
+?sort=<kolom1, -kolom2, ...>
+```
+
+- Mengurutkan data berdasarkan kolom yang ditentukan dan urutan yang berkaitan. Anda boleh memisahkan beberapa kolom dengan koma (`,`).
+- `<kolom1>`: Mewakili kolom yang akan diurutkan secara menaik.
+- `-<kolom2>`: Mewakili kolom yang akan diurutkan secara menurun. Menambahkan tanda minus (`-`) menunjukkan urutan menurun.
+
+### Parameter `date_start` dan `date_end`
+
+```http
+?date_start=<YYYY-MM-DD>@<kolom_tarikh>
+?date_end=<YYYY-MM-DD>@<kolom_tarikh>
+```
+
+- Menyaring data dalam julat tarikh yang ditentukan.
+- `<YYYY-MM-DD>`: Mewakili tarikh mula dan akhir (termasuk) julat tarikh yang diinginkan.
+- `<kolom_tarikh>`: Menunjukkan kolom tarikh yang akan disaring.
+
+### Parameter `timestamp_start` dan `timestamp_end`
+
+```http
+?timestamp_start=<YYYY-MM-DD HH:MM:SS>@<kolom_capaian_waktu>
+?timestamp_end=<YYYY-MM-DD HH:MM:SS>@<kolom_capaian_waktu>
+```
+
+- Menyaring data dalam julat capaian waktu yang ditentukan.
+- `<YYYY-MM-DD HH:MM:SS>`: Mewakili capaian waktu mula dan akhir (termasuk) julat capaian waktu yang diinginkan.
+- `<kolom_capaian_waktu>`: Menunjukkan kolom capaian waktu yang akan disaring.
+
+### Parameter `limit`
+
+```http
+?limit=<nilai>
+```
+
+- Menentukan jumlah maksimum rekod yang akan dikembalikan.
+- `<nilai>`: Harus menjadi nombor berpositif menunjukkan jumlah maksimum rekod yang akan dikembalikan.
+  Jika jumlah rekod yang tersedia kurang daripada had yang ditetapkan, semua rekod yang tersedia akan dikembalikan.
+
+### Parameter `include` dan `exclude`
+
+```http
+?include=<kolom1,kolom2,...>
+?exclude=<kolom1,kolom2,...>
+```
+
+- Format: Menentukan kolom-kolom yang akan dimasukkan atau dikecualikan dalam respons.
+- `<kolom1, kolom2, ...>`: Menentukan kolom-kolom yang akan dimasukkan atau dikecualikan, dipisahkan oleh koma (`,`).
+  Apabila kedua-dua parameter `include` dan `exclude` disediakan, `include` akan diutamakan.
