docs malay root level

--- a/apps/docs/pages/authentication.ms.mdx
+++ b/apps/docs/pages/authentication.ms.mdx
@@ -1,27 +1,27 @@
 ## Permohonan Token API
 
-Walaupun mengakses OpenAPI tidak memerlukan token API, kami menyediakan pilihan untuk memohon token jika anda merancang untuk mencapai had kadar atau memerlukan penggunaan yang lebih tinggi. Untuk memohon token API, sila ikuti langkah-langkah di bawah:
+Walaupun penggunaan OpenAPI tidak memerlukan sebarang token pengesahan, kami menyediakan pilihan untuk memohon token jika penggunaan anda melebihi had kadar penggunaan awam yang ditetapkan. Untuk memohon token API, sila ikuti langkah-langkah berikut:
 
 1. Hantar emel ke [data.dtsa@mampu.gov.my](mailto:data.dtsa@mampu.gov.my) dengan butiran berikut:
 
    - Nama anda
    - Alamat emel anda
-   - Sebab permohonan peningkatan had kadar
+   - Sebab peningkatan had kadar penggunaan
 
-2. Pasukan kami akan mengkaji permohonan anda dan menilainya mengikut kes secara individu.
+2. Permohonan anda akan dinilai oleh pihak kami, mengikut kes demi kes.
 
-3. Jika permohonan anda diluluskan, anda akan menerima token API melalui emel.
+3. Jika permohonan anda diluluskan, anda akan menerima token API melalui emel dari pihak kami.
 
 ## Menggunakan Token API Anda
 
 Setelah anda mendapatkan token API, anda perlu menyertakannya dalam permintaan API anda untuk pengesahan dan mendapatkan akses kepada had penggunaan yang lebih tinggi. Ikuti langkah-langkah di bawah untuk menyertakan token API anda dalam permintaan HTTP:
 
-1. Tambahkan tajuk berikut ke permintaan anda:
+1. Tambahkan 'header' berikut ke permintaan anda:
 
    ```
    Authorization: Bearer <TOKEN_ANDA_DI_SINI>
    ```
 
-   Gantikan `<TOKEN_ANDA_DI_SINI>` dengan token sebenar yang anda terima.
+   Gantikan `<TOKEN_ANDA_DI_SINI>` dengan token yang diterima.
 
-2. Hantar permintaan HTTP anda dengan header `Authorization` yang ditambahkan.
+2. Hantar permintaan HTTP anda dengan 'header' `Authorization` yang ditambahkan.
