--- a/apps/docs/pages/faq.ms.mdx
+++ b/apps/docs/pages/faq.ms.mdx
@@ -4,56 +4,25 @@ import { FAQBox } from "./faq.en.mdx";
 
 ## Umum
 
-<FAQBox title="How can I notify the team of a bug?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
+<FAQBox title="Bagaimanakah cara untuk melapori 'bug' di OpenAPI?">
+  Untuk melaporkan sebarang 'bug' yang ditemui, sila [buka isu
+  baharu](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Bug&labels=bugs) di
+  GitHub repositori kami.
 </FAQBox>
-<FAQBox title="How can I suggest improvements for the site?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="Can I invite the data.gov.my team to give a talk?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="Is the site’s content officially shared anywhere else?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="What is the meaning of life?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
+<FAQBox title="Bagaimanakah cara untuk memberi cadangan penambahbaikan?">
+  Sama juga, sebarang cadangan penambahbaikan boleh dianjurkan di GitHub repositori kami dengan
+  [membuka isu
+  baharu](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Improvement&labels=improvement).
 </FAQBox>
 
 ## Data & Teknologi
 
-<FAQBox FAQBox title="Why don’t you have a data request page yet?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
+<FAQBox title="Bolehkah saya guna data-data yang disediakan secara percuma?">
+  Data ini telah dibuka di bawah Lesen Antarabangsa Creative Commons Attribution 4.0 (CC BY 4.0).
+  Anda boleh menggunakan data yang tersedia pada platform kami secara percuma kerana ia adalah
+  sebahagian daripada komitmen kami kepada prinsip data terbuka. Kami menggalakkan pengguna untuk
+  meneroka, menganalisis dan menggunakan data untuk memacu inovasi dan pandangan yang berasas.
 </FAQBox>
-<FAQBox title="Can I really use all the data here for free?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="Could you share how this site was built?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="Can my non-government agency share data here?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
-</FAQBox>
-<FAQBox title="How do you safeguard privacy in your operations?">
-  Answer: common inquiries and provide clarity on various aspects of the MODS community. This
-  section aims to assist potential applicants, members, and the wider audience in understanding the
-  purpose, objectives, and procedures of MODS.
+<FAQBox title="Bolehkah kongsi cara-cara untuk membina laman ini?">
+  Anda boleh lihat [semuanya di sini.](https://github.com/data-gov-my/datagovmy-openapi)
 </FAQBox>
