--- a/apps/docs/pages/index.ms.mdx
+++ b/apps/docs/pages/index.ms.mdx
@@ -1,18 +1,18 @@
 ## Dokumentasi OpenAPI
 
-Selamat datang ke dokumentasi bagi API Terbuka portal data terbuka rasmi Malaysia!
-Panduan komprehensif ini direka untuk memberi anda semua maklumat yang anda perlukan untuk menggunakan API Terbuka yang dibangunkan oleh kerajaan Malaysia dengan berkesan.
+Selamat datang ke dokumentasi bagi OpenAPI portal data terbuka rasmi Malaysia!
+Panduan komprehensif ini direka untuk memberi anda semua maklumat yang anda perlukan untuk menggunakan OpenAPI yang dibangunkan oleh kerajaan Malaysia dengan berkesan.
 Sama ada anda seorang pembangun, saintis data, atau seorang warganegara yang berminat untuk mengakses data yang telus,
-dokumentasi ini akan berfungsi sebagai panduan anda untuk memanfaatkan kekuatan API Terbuka.
+dokumentasi ini akan berfungsi sebagai panduan anda untuk memanfaatkan kekuatan OpenAPI.
 
-## Apakah API Terbuka Ini?
+## Apakah OpenAPI Ini?
 
-API Terbuka yang dibina oleh kerajaan Malaysia adalah API berdasarkan prinsip REST yang menggunakan rangkaian Django.
+OpenAPI yang dibina oleh kerajaan Malaysia adalah API berdasarkan prinsip REST yang menggunakan rangkaian Django.
 API ini telah dibangunkan dengan matlamat untuk menyediakan akses data yang telus kepada semua warganegara, dengan matlamat-matlamat berikut:
 
 - **Akses Data yang Telus:** API ini menyediakan cara yang mesra pengguna untuk mengakses pelbagai set data, mempromosikan telus dan membolehkan pembuatan keputusan yang berinformasi.
 - **Kemudahan Penggunaan:** API ini direka untuk mudah difahami dan difahami, memastikan pengguna boleh mendapatkan data dengan cekap tanpa kerumitan yang tidak perlu.
-- **Pelbagai Set Data:** API Terbuka menawarkan akses kepada pelbagai data, membenarkan pengguna meneroka dan menganalisis pelbagai aspek masyarakat Malaysia.
+- **Pelbagai Set Data:** OpenAPI menawarkan akses kepada pelbagai data, membenarkan pengguna meneroka dan menganalisis pelbagai aspek masyarakat Malaysia.
 
 ## Menggunakan Penolong AI
 
