--- a/apps/docs/pages/changelog.ms.mdx
+++ b/apps/docs/pages/changelog.ms.mdx
@@ -2,7 +2,7 @@
 
 ### Pelancaran Awal
 
-- Dilancarkan OpenAPI Malaysia dengan endpoints berikut:
+- Pelancaran OpenAPI Malaysia dengan 'endpoints' berikut:
   - `/data-catalogue` untuk mengakses katalog data.
   - `/opendosm` untuk mengakses katalog data OpenDOSM.
   - `/flood-warning` untuk mengakses data amaran banjir secara waktu sebenar.
