--- a/apps/docs/pages/request-query.ms.mdx
+++ b/apps/docs/pages/request-query.ms.mdx
@@ -1,116 +1,116 @@
 ## Parameter Pertanyaan
 
-Untuk API yang menyediakan koleksi rekod, anda boleh menyaring rekod-rekod dengan menggunakan parameter pertanyaan.
-Berikut adalah parameter pertanyaan yang tersedia yang boleh digunakan kecuali dinyatakan sebaliknya pada halaman API tertentu.
+Bagi API yang menyediakan koleksi rekod, anda boleh menyaringi rekod-rekod dengan menggunakan parameter pertanyaan.
+Berikut adalah parameter pertanyaan yang disediakan, kecuali dinyatakan sebaliknya pada halaman API tertentu.
 
-| Parameter         | Jenis      | Penerangan                                                                    |
-| ----------------- | ---------- | ----------------------------------------------------------------------------- |
-| `filter`          | `string`   | Menyaring hasil untuk sepadan dengan nilai kolom yang tepat (peka kes).       |
-| `ifilter`         | `string`   | Menyaring hasil untuk sepadan dengan nilai kolom yang tepat (tidak peka kes). |
-| `contains`        | `string`   | Menyaring hasil untuk sepadan dengan sebahagian nilai kolom (peka kes).       |
-| `icontains`       | `string`   | Menyaring hasil untuk sepadan dengan sebahagian nilai kolom (tidak peka kes). |
-| `range`           | `string`   | Menyaring nilai-nilai kolom berjumlah dalam julat yang ditentukan.            |
-| `sort`            | `string`   | Menentukan urutan rekod (menaik atau menurun).                                |
-| `date_start`      | `date`     | Menyaring hasil bermula dari tarikh tertentu.                                 |
-| `date_end`        | `date`     | Menyaring hasil berakhir pada tarikh tertentu.                                |
-| `timestamp_start` | `datetime` | Menyaring hasil bermula dari capaian waktu tertentu.                          |
-| `timestamp_end`   | `datetime` | Menyaring hasil berakhir pada capaian waktu tertentu.                         |
-| `limit`           | `integer`  | Menetapkan jumlah maksimum rekod yang akan dikembalikan.                      |
-| `include`         | `string`   | Menentukan kolom-kolom yang akan dimasukkan dalam rekod.                      |
-| `exclude`         | `string`   | Menentukan kolom-kolom yang akan dikecualikan daripada rekod.                 |
+| Parameter         | Jenis      | Penerangan                                                              |
+| ----------------- | ---------- | ----------------------------------------------------------------------- |
+| `filter`          | `string`   | Menyaring hasil mengikut nilai lajur yang tepat (sensitif huruf).       |
+| `ifilter`         | `string`   | Menyaring hasil mengikut nilai lajur yang tepat (tidak sensitif huruf). |
+| `contains`        | `string`   | Menyaring hasil mengikut sebahagian nilai lajur (sensitif huruf).       |
+| `icontains`       | `string`   | Menyaring hasil mengikut sebahagian nilai lajur (tidak sensitif huruf). |
+| `range`           | `string`   | Menyaring nilai-nilai lajur berjumlah dalam julat yang ditentukan.      |
+| `sort`            | `string`   | Menentukan turutan rekod (menaik atau menurun).                         |
+| `date_start`      | `date`     | Menyaring hasil bermula dari tarikh tertentu.                           |
+| `date_end`        | `date`     | Menyaring hasil berakhir pada tarikh tertentu.                          |
+| `timestamp_start` | `datetime` | Menyaring hasil bermula dari capaian waktu tertentu.                    |
+| `timestamp_end`   | `datetime` | Menyaring hasil berakhir pada capaian waktu tertentu.                   |
+| `limit`           | `integer`  | Menetapkan jumlah maksimum rekod yang akan dikembalikan.                |
+| `include`         | `string`   | Menentukan lajur-lajur yang akan dimasukkan dalam rekod.                |
+| `exclude`         | `string`   | Menentukan lajur-lajur yang akan dikecualikan daripada rekod.           |
 
-Sila ambil perhatian bahawa parameter `filter` digunakan untuk penyaringan pada peringkat baris, sementara parameter `include`/`exclude` digunakan untuk penyaringan pada peringkat kolom.
+Sila ambil perhatian bahawa parameter `filter` digunakan untuk penyaringan pada peringkat rekod barisan, sementara parameter `include`/`exclude` digunakan untuk penyaringan pada peringkat lajur.
 
-## Syntax Pertanyaan
+## Sintaks Pertanyaan
 
-Apabila berurusan dengan OpenAPI, anda boleh menentukan parameter pertanyaan dengan menambahkan tanda soalan (`?`) selepas URL asas.
+Anda boleh menentukan parameter pertanyaan dengan menambahkan tanda soalan (`?`) selepas URL asas.
 Parameter pertanyaan terdiri daripada sepasang nilai-nilai, di mana kunci dan nilai dipisahkan oleh tanda sama dengan (`=`).
 
 ### Parameter `filter`
 
 ```http
-?filter=<nilai>@<kolom>
+?filter=<nilai>@<lajur>
 ```
 
 - Menyaring data berdasarkan **padanan rentetan tepat yang peka kes**.
-- `<nilai>`: Mewakili nilai rentetan yang diinginkan dalam `<kolom>`.
-- `<kolom>`: Menunjukkan kolom yang akan disaring.
+- `<nilai>`: Mewakili nilai rentetan yang diinginkan dalam `<lajur>`.
+- `<lajur>`: Menunjukkan lajur yang akan disaring.
 
 ### Parameter `ifilter`
 
 ```http
-?ifilter=<nilai>@<kolom>
+?ifilter=<nilai>@<lajur>
 ```
 
 - Menyaring data berdasarkan **padanan rentetan tepat yang tidak peka kes**.
-- `<nilai>`: Mewakili nilai rentetan yang diinginkan dalam `<kolom>`.
-- `<kolom>`: Menunjukkan kolom yang akan disaring.
+- `<nilai>`: Mewakili nilai rentetan yang diinginkan dalam `<lajur>`.
+- `<lajur>`: Menunjukkan lajur yang akan disaring.
 
 ### Parameter `contains`
 
 ```http
-?contains=<nilai>@<kolom>
+?contains=<nilai>@<lajur>
 ```
 
 - Menyaring data berdasarkan **padanan sebahagian rentetan yang peka kes**.
-- `<nilai>`: Mewakili nilai rentetan sebahagian dalam `<kolom>`.
-- `<kolom>`: Menunjukkan kolom yang akan disaring.
+- `<nilai>`: Mewakili nilai rentetan sebahagian dalam `<lajur>`.
+- `<lajur>`: Menunjukkan lajur yang akan disaring.
 
 ### Parameter `icontains`
 
 ```http
-?icontains=<nilai>@<kolom>
+?icontains=<nilai>@<lajur>
 ```
 
 - Menyaring data berdasarkan **padanan sebahagian rentetan yang tidak peka kes**.
-- `<nilai>`: Mewakili nilai rentetan sebahagian dalam `<kolom>`.
-- `<kolom>`: Menunjukkan kolom yang akan disaring.
+- `<nilai>`: Mewakili nilai rentetan sebahagian dalam `<lajur>`.
+- `<lajur>`: Menunjukkan lajur yang akan disaring.
 
 ### Parameter `range`
 
 ```http
-?range=<kolom>[<mula>:<akhir>]
+?range=<lajur>[<mula>:<akhir>]
 ```
 
 - Menyaring data dalam julat nilai berjumlah yang ditentukan.
-- `<kolom>` (wajib): Menentukan kolom yang akan disaring.
+- `<lajur>` (wajib): Menentukan lajur yang akan disaring.
 - `<mula>` dan `<akhir>` (pilihan): Merujuk kepada julat angka, kedua-dua nilai adalah termasuk. Jika tidak diberikan, nilai terendah dan tertinggi yang mungkin digunakan.
 
 ### Parameter `sort`
 
 ```http
-# satu kolom
-?sort=<kolom>
+# satu lajur
+?sort=<lajur>
 
-# beberapa kolom
-?sort=<kolom1, -kolom2, ...>
+# beberapa lajur
+?sort=<lajur1, -lajur2, ...>
 ```
 
-- Mengurutkan data berdasarkan kolom yang ditentukan dan urutan yang berkaitan. Anda boleh memisahkan beberapa kolom dengan koma (`,`).
-- `<kolom1>`: Mewakili kolom yang akan diurutkan secara menaik.
-- `-<kolom2>`: Mewakili kolom yang akan diurutkan secara menurun. Menambahkan tanda minus (`-`) menunjukkan urutan menurun.
+- Mengurutkan data berdasarkan lajur yang ditentukan dan turutan yang berkaitan. Anda boleh memisahkan beberapa lajur dengan koma (`,`).
+- `<lajur1>`: Mewakili lajur yang akan diurutkan secara menaik.
+- `-<lajur2>`: Mewakili lajur yang akan diurutkan secara menurun. Menambahkan tanda minus (`-`) menunjukkan urutan menurun.
 
 ### Parameter `date_start` dan `date_end`
 
 ```http
-?date_start=<YYYY-MM-DD>@<kolom_tarikh>
-?date_end=<YYYY-MM-DD>@<kolom_tarikh>
+?date_start=<YYYY-MM-DD>@<lajur_tarikh>
+?date_end=<YYYY-MM-DD>@<lajur_tarikh>
 ```
 
 - Menyaring data dalam julat tarikh yang ditentukan.
 - `<YYYY-MM-DD>`: Mewakili tarikh mula dan akhir (termasuk) julat tarikh yang diinginkan.
-- `<kolom_tarikh>`: Menunjukkan kolom tarikh yang akan disaring.
+- `<lajur_tarikh>`: Menunjukkan lajur tarikh yang akan disaring.
 
 ### Parameter `timestamp_start` dan `timestamp_end`
 
 ```http
-?timestamp_start=<YYYY-MM-DD HH:MM:SS>@<kolom_capaian_waktu>
-?timestamp_end=<YYYY-MM-DD HH:MM:SS>@<kolom_capaian_waktu>
+?timestamp_start=<YYYY-MM-DD HH:MM:SS>@<lajur_capaian_waktu>
+?timestamp_end=<YYYY-MM-DD HH:MM:SS>@<lajur_capaian_waktu>
 ```
 
 - Menyaring data dalam julat capaian waktu yang ditentukan.
 - `<YYYY-MM-DD HH:MM:SS>`: Mewakili capaian waktu mula dan akhir (termasuk) julat capaian waktu yang diinginkan.
-- `<kolom_capaian_waktu>`: Menunjukkan kolom capaian waktu yang akan disaring.
+- `<lajur_capaian_waktu>`: Menunjukkan lajur capaian waktu yang akan disaring.
 
 ### Parameter `limit`
 
@@ -125,10 +125,10 @@ Parameter pertanyaan terdiri daripada sepasang nilai-nilai, di mana kunci dan ni
 ### Parameter `include` dan `exclude`
 
 ```http
-?include=<kolom1,kolom2,...>
-?exclude=<kolom1,kolom2,...>
+?include=<lajur1,lajur2,...>
+?exclude=<lajur1,lajur2,...>
 ```
 
-- Format: Menentukan kolom-kolom yang akan dimasukkan atau dikecualikan dalam respons.
-- `<kolom1, kolom2, ...>`: Menentukan kolom-kolom yang akan dimasukkan atau dikecualikan, dipisahkan oleh koma (`,`).
+- Format: Menentukan lajur-lajur yang akan dimasukkan atau dikecualikan dalam respons.
+- `<lajur1, lajur2, ...>`: Menentukan lajur-lajur yang akan dimasukkan atau dikecualikan, dipisahkan oleh koma (`,`).
   Apabila kedua-dua parameter `include` dan `exclude` disediakan, `include` akan diutamakan.
